docs-kits_versioned_docs/version-23.09/kits/Business Partner Kit/Software Development View/Pool Api/create-addresses.api.mdx
---
id: create-addresses
title: "Create new address business partners"
description: "Create new business partners of type address by specifying the BPN of the parent each address belongs to. A parent can be either a site or legal entity business partner. If the parent cannot be found, the record is ignored.For matching purposes, on each record you can specify your own index value which will reappear in the corresponding record of the response."
sidebar_label: "Create new address business partners"
hide_title: true
hide_table_of_contents: true
api: {"tags":["address-controller"],"description":"Create new business partners of type address by specifying the BPN of the parent each address belongs to. A parent can be either a site or legal entity business partner. If the parent cannot be found, the record is ignored.For matching purposes, on each record you can specify your own index value which will reappear in the corresponding record of the response.","operationId":"createAddresses","requestBody":{"content":{"application/json":{"schema":{"type":"array","items":{"type":"object","properties":{"name":{"type":"string","description":"Name of the logistic address of the business partner. This is not according to official\nregisters but according to the name the uploading sharing member chooses."},"states":{"type":"array","items":{"type":"object","properties":{"description":{"type":"string","description":"Description of the status"},"validFrom":{"type":"string","description":"Since when the status is/was valid","format":"date-time"},"validTo":{"type":"string","description":"Until the status was valid, if applicable","format":"date-time"},"type":{"type":"string","description":"The type of this specified status","enum":["ACTIVE","INACTIVE"]}},"description":"Status record for a address"}},"identifiers":{"type":"array","items":{"type":"object","properties":{"value":{"type":"string","description":"Value of the identifier"},"type":{"type":"string","description":"Technical key of the type to which this identifier belongs to"}},"description":"Identifier record for a logistic address"}},"physicalPostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"Geo coordinates record for an address"},"country":{"type":"string","description":"Describes the country","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"postalCode":{"type":"string","description":"A postal code, also known as postcode, PIN or ZIP Code"},"city":{"type":"string","description":"The city of the address (Synonym: Town, village, municipality)"},"street":{"type":"object","properties":{"name":{"type":"string","description":"Describes the official Name of the Street."},"houseNumber":{"type":"string","description":"Describes the House Number"},"milestone":{"type":"string","description":"The Milestone is relevant for long roads without specific house numbers."},"direction":{"type":"string","description":"Describes the direction"}},"description":"A public road in a city, town, or village, typically with houses and buildings on one or both sides."},"administrativeAreaLevel1":{"type":"string","description":"Identifying code of the Region within the country (e.g. Bayern)"},"administrativeAreaLevel2":{"type":"string","description":"Further possibility to describe the region/address(e.g. County/Landkreis)"},"administrativeAreaLevel3":{"type":"string","description":"Further possibility to describe the region/address(e.g. Township/Gemeinde)"},"district":{"type":"string","description":"Divides the city in several smaller areas"},"companyPostalCode":{"type":"string","description":"A separate postal code for a company, also known as postcode, PIN or ZIP Code"},"industrialZone":{"type":"string","description":"The practice of designating an area for industrial development"},"building":{"type":"string","description":"Describes a specific building within the address"},"floor":{"type":"string","description":"Describes the floor/level the delivery shall take place"},"door":{"type":"string","description":"Describes the  door/room/suite on the respective floor the delivery shall take place"}},"description":"Physical Postal Address Part"},"alternativePostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"Geo coordinates record for an address"},"country":{"type":"string","description":"Describes the country","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"postalCode":{"type":"string","description":"A postal code, also known as postcode, PIN or ZIP Code"},"city":{"type":"string","description":"The city of the address (Synonym: Town, village, municipality)"},"administrativeAreaLevel1":{"type":"string","description":"Identifying code of the Region within the country (e.g. Bayern)"},"deliveryServiceNumber":{"type":"string","description":"Describes the PO Box or private Bag number the delivery should be placed at."},"deliveryServiceType":{"type":"string","description":"The type of this specified delivery","enum":["PO_BOX","PRIVATE_BAG","BOITE_POSTALE"]},"deliveryServiceQualifier":{"type":"string","description":"Delivery Service Qualifier"}},"description":"Alternative Postal Address Part"},"bpnParent":{"type":"string"},"index":{"type":"string"}},"description":"Request for creating new business partner record of type address"}}}},"required":true},"responses":{"200":{"description":"New business partner record successfully created, possible errors are returned","content":{"application/json":{"schema":{"type":"object","properties":{"entities":{"type":"array","items":{"type":"object","properties":{"bpna":{"type":"string","description":"Business Partner Number of this address"},"name":{"type":"string","description":"Name of the logistic address of the business partner. This is not according to official\nregisters but according to the name the uploading sharing member chooses."},"states":{"type":"array","items":{"type":"object","properties":{"description":{"type":"string","description":"Exact, official denotation of the status"},"validFrom":{"type":"string","description":"Since when the status is/was valid","format":"date-time"},"validTo":{"type":"string","description":"Until the status was valid, if applicable","format":"date-time"},"type":{"type":"object","properties":{"technicalKey":{"type":"string","enum":["ACTIVE","INACTIVE"]},"name":{"type":"string"}},"description":"Named type uniquely identified by its technical key"}},"description":"Status record of a legal entity"}},"identifiers":{"type":"array","items":{"type":"object","properties":{"value":{"type":"string","description":"Value of the identifier"},"type":{"type":"object","properties":{"technicalKey":{"type":"string"},"name":{"type":"string"}},"description":"Named type uniquely identified by its technical key"}},"description":"Identifier record of a logistic address"}},"physicalPostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"Geo coordinates record for an address"},"country":{"type":"string","description":"Describes the country","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"postalCode":{"type":"string","description":"A postal code, also known as postcode, PIN or ZIP Code"},"city":{"type":"string","description":"The city of the address (Synonym: Town, village, municipality)"},"street":{"type":"object","properties":{"name":{"type":"string","description":"Describes the official Name of the Street."},"houseNumber":{"type":"string","description":"Describes the House Number"},"milestone":{"type":"string","description":"The Milestone is relevant for long roads without specific house numbers."},"direction":{"type":"string","description":"Describes the direction"}},"description":"A public road in a city, town, or village, typically with houses and buildings on one or both sides."},"administrativeAreaLevel1":{"type":"string","description":"Identifying code of the Region within the country (e.g. Bayern)"},"administrativeAreaLevel2":{"type":"string","description":"Further possibility to describe the region/address(e.g. County/Landkreis)"},"administrativeAreaLevel3":{"type":"string","description":"Further possibility to describe the region/address(e.g. Township/Gemeinde)"},"district":{"type":"string","description":"Divides the city in several smaller areas"},"companyPostalCode":{"type":"string","description":"A separate postal code for a company, also known as postcode, PIN or ZIP Code"},"industrialZone":{"type":"string","description":"The practice of designating an area for industrial development"},"building":{"type":"string","description":"Describes a specific building within the address"},"floor":{"type":"string","description":"Describes the floor/level the delivery shall take place"},"door":{"type":"string","description":"Describes the  door/room/suite on the respective floor the delivery shall take place"}},"description":"Physical Postal Address Part"},"alternativePostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"Geo coordinates record for an address"},"country":{"type":"string","description":"Describes the country","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"postalCode":{"type":"string","description":"A postal code, also known as postcode, PIN or ZIP Code"},"city":{"type":"string","description":"The city of the address (Synonym: Town, village, municipality)"},"administrativeAreaLevel1":{"type":"string","description":"Identifying code of the Region within the country (e.g. Bayern)"},"deliveryServiceNumber":{"type":"string","description":"Describes the PO Box or private Bag number the delivery should be placed at."},"deliveryServiceType":{"type":"string","description":"The type of this specified delivery","enum":["PO_BOX","PRIVATE_BAG","BOITE_POSTALE"]},"deliveryServiceQualifier":{"type":"string","description":"Delivery Service Qualifier"}},"description":"Alternative Postal Address Part"},"bpnLegalEntity":{"type":"string","description":"BPN of the related legal entity, if available"},"bpnSite":{"type":"string","description":"BPN of the related site, if available"},"createdAt":{"type":"string","description":"The timestamp the business partner data was created","format":"date-time"},"updatedAt":{"type":"string","description":"The timestamp the business partner data was last updated","format":"date-time"},"isLegalAddress":{"type":"boolean","description":"Flag if this is the legal address of its related legal entity"},"isMainAddress":{"type":"boolean","description":"Flag if this is the main address of its related site"},"index":{"type":"string"}},"description":"Created business partners of type address"}},"errors":{"type":"array","items":{"title":"ErrorInfo","type":"object","properties":{"errorCode":{"type":"string","description":"AddressCreateError","enum":["BpnNotValid","SiteNotFound","LegalEntityNotFound"]},"message":{"type":"string"},"entityKey":{"type":"string"}},"description":"Holds information about failures when creating or updating an entity"}},"errorCount":{"type":"integer","format":"int32"},"entityCount":{"type":"integer","format":"int32"}},"description":"Holds information about successfully and failed entities after the creating/updating of several objects"}}}},"400":{"description":"On malformed requests"}},"method":"post","path":"/api/catena/addresses","servers":[{"url":"http://localhost:8080","description":"Generated server url"}],"jsonRequestBodyExample":[{"name":"string","states":[{"description":"string","validFrom":"2023-06-26","validTo":"2023-06-26","type":"ACTIVE"}],"identifiers":[{"value":"string","type":"string"}],"physicalPostalAddress":{"geographicCoordinates":{"longitude":0,"latitude":0,"altitude":0},"country":"UNDEFINED","postalCode":"string","city":"string","street":{"name":"string","houseNumber":"string","milestone":"string","direction":"string"},"administrativeAreaLevel1":"string","administrativeAreaLevel2":"string","administrativeAreaLevel3":"string","district":"string","companyPostalCode":"string","industrialZone":"string","building":"string","floor":"string","door":"string"},"alternativePostalAddress":{"geographicCoordinates":{"longitude":0,"latitude":0,"altitude":0},"country":"UNDEFINED","postalCode":"string","city":"string","administrativeAreaLevel1":"string","deliveryServiceNumber":"string","deliveryServiceType":"PO_BOX","deliveryServiceQualifier":"string"},"bpnParent":"string","index":"string"}],"info":{"title":"Business Partner Data Management Pool","description":"Service that manages and shares business partner data with other CatenaX services","version":"4.0.0-SNAPSHOT"},"postman":{"name":"Create new address business partners","description":{"content":"Create new business partners of type address by specifying the BPN of the parent each address belongs to. A parent can be either a site or legal entity business partner. If the parent cannot be found, the record is ignored.For matching purposes, on each record you can specify your own index value which will reappear in the corresponding record of the response.","type":"text/plain"},"url":{"path":["api","catena","addresses"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
sidebar_class_name: "post api-method"
info_path: docs-kits/kits/Business Partner Kit/Software Development View/Pool Api/business-partner-data-management-pool
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import TabItem from "@theme/TabItem";

## Create new address business partners



Create new business partners of type address by specifying the BPN of the parent each address belongs to. A parent can be either a site or legal entity business partner. If the parent cannot be found, the record is ignored.For matching purposes, on each record you can specify your own index value which will reappear in the corresponding record of the response.

<MimeTabs><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Request Body</strong><span style={{"opacity":"0.6"}}> array</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"Name of the logistic address of the business partner. This is not according to official\nregisters but according to the name the uploading sharing member chooses."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"description"} required={false} deprecated={undefined} schemaDescription={"Description of the status"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Since when the status is/was valid"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Until the status was valid, if applicable"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status"} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>identifiers</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"value"} required={false} deprecated={undefined} schemaDescription={"Value of the identifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"Technical key of the type to which this identifier belongs to"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>physicalPostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Physical Postal Address Part

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Geo coordinates record for an address

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"Describes the country"} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"A postal code, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The city of the address (Synonym: Town, village, municipality)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>street</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

A public road in a city, town, or village, typically with houses and buildings on one or both sides.

</div><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"Describes the official Name of the Street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"houseNumber"} required={false} deprecated={undefined} schemaDescription={"Describes the House Number"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"milestone"} required={false} deprecated={undefined} schemaDescription={"The Milestone is relevant for long roads without specific house numbers."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"direction"} required={false} deprecated={undefined} schemaDescription={"Describes the direction"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"Identifying code of the Region within the country (e.g. Bayern)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel2"} required={false} deprecated={undefined} schemaDescription={"Further possibility to describe the region/address(e.g. County/Landkreis)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel3"} required={false} deprecated={undefined} schemaDescription={"Further possibility to describe the region/address(e.g. Township/Gemeinde)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"district"} required={false} deprecated={undefined} schemaDescription={"Divides the city in several smaller areas"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"companyPostalCode"} required={false} deprecated={undefined} schemaDescription={"A separate postal code for a company, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"industrialZone"} required={false} deprecated={undefined} schemaDescription={"The practice of designating an area for industrial development"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"building"} required={false} deprecated={undefined} schemaDescription={"Describes a specific building within the address"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"floor"} required={false} deprecated={undefined} schemaDescription={"Describes the floor/level the delivery shall take place"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"door"} required={false} deprecated={undefined} schemaDescription={"Describes the  door/room/suite on the respective floor the delivery shall take place"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>alternativePostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Alternative Postal Address Part

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Geo coordinates record for an address

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"Describes the country"} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"A postal code, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The city of the address (Synonym: Town, village, municipality)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"Identifying code of the Region within the country (e.g. Bayern)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceNumber"} required={false} deprecated={undefined} schemaDescription={"Describes the PO Box or private Bag number the delivery should be placed at."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceType"} required={false} deprecated={undefined} schemaDescription={"The type of this specified delivery"} schemaName={"string"} qualifierMessage={"**Possible values:** [`PO_BOX`, `PRIVATE_BAG`, `BOITE_POSTALE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceQualifier"} required={false} deprecated={undefined} schemaDescription={"Delivery Service Qualifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"bpnParent"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"index"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></ul></details></TabItem></MimeTabs><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

New business partner record successfully created, possible errors are returned

</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>entities</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"bpna"} required={false} deprecated={undefined} schemaDescription={"Business Partner Number of this address"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"Name of the logistic address of the business partner. This is not according to official\nregisters but according to the name the uploading sharing member chooses."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"description"} required={false} deprecated={undefined} schemaDescription={"Exact, official denotation of the status"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Since when the status is/was valid"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Until the status was valid, if applicable"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>type</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Named type uniquely identified by its technical key

</div><SchemaItem collapsible={false} name={"technicalKey"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>identifiers</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"value"} required={false} deprecated={undefined} schemaDescription={"Value of the identifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>type</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Named type uniquely identified by its technical key

</div><SchemaItem collapsible={false} name={"technicalKey"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>physicalPostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Physical Postal Address Part

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Geo coordinates record for an address

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"Describes the country"} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"A postal code, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The city of the address (Synonym: Town, village, municipality)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>street</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

A public road in a city, town, or village, typically with houses and buildings on one or both sides.

</div><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"Describes the official Name of the Street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"houseNumber"} required={false} deprecated={undefined} schemaDescription={"Describes the House Number"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"milestone"} required={false} deprecated={undefined} schemaDescription={"The Milestone is relevant for long roads without specific house numbers."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"direction"} required={false} deprecated={undefined} schemaDescription={"Describes the direction"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"Identifying code of the Region within the country (e.g. Bayern)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel2"} required={false} deprecated={undefined} schemaDescription={"Further possibility to describe the region/address(e.g. County/Landkreis)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel3"} required={false} deprecated={undefined} schemaDescription={"Further possibility to describe the region/address(e.g. Township/Gemeinde)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"district"} required={false} deprecated={undefined} schemaDescription={"Divides the city in several smaller areas"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"companyPostalCode"} required={false} deprecated={undefined} schemaDescription={"A separate postal code for a company, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"industrialZone"} required={false} deprecated={undefined} schemaDescription={"The practice of designating an area for industrial development"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"building"} required={false} deprecated={undefined} schemaDescription={"Describes a specific building within the address"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"floor"} required={false} deprecated={undefined} schemaDescription={"Describes the floor/level the delivery shall take place"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"door"} required={false} deprecated={undefined} schemaDescription={"Describes the  door/room/suite on the respective floor the delivery shall take place"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>alternativePostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Alternative Postal Address Part

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Geo coordinates record for an address

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"Describes the country"} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"A postal code, also known as postcode, PIN or ZIP Code"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The city of the address (Synonym: Town, village, municipality)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"Identifying code of the Region within the country (e.g. Bayern)"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceNumber"} required={false} deprecated={undefined} schemaDescription={"Describes the PO Box or private Bag number the delivery should be placed at."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceType"} required={false} deprecated={undefined} schemaDescription={"The type of this specified delivery"} schemaName={"string"} qualifierMessage={"**Possible values:** [`PO_BOX`, `PRIVATE_BAG`, `BOITE_POSTALE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceQualifier"} required={false} deprecated={undefined} schemaDescription={"Delivery Service Qualifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"bpnLegalEntity"} required={false} deprecated={undefined} schemaDescription={"BPN of the related legal entity, if available"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"bpnSite"} required={false} deprecated={undefined} schemaDescription={"BPN of the related site, if available"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"createdAt"} required={false} deprecated={undefined} schemaDescription={"The timestamp the business partner data was created"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"updatedAt"} required={false} deprecated={undefined} schemaDescription={"The timestamp the business partner data was last updated"} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"isLegalAddress"} required={false} deprecated={undefined} schemaDescription={"Flag if this is the legal address of its related legal entity"} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"isMainAddress"} required={false} deprecated={undefined} schemaDescription={"Flag if this is the main address of its related site"} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"index"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"errorCode"} required={false} deprecated={undefined} schemaDescription={"AddressCreateError"} schemaName={"string"} qualifierMessage={"**Possible values:** [`BpnNotValid`, `SiteNotFound`, `LegalEntityNotFound`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"message"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"entityKey"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"errorCount"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"entityCount"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"entities\": [\n    {\n      \"bpna\": \"string\",\n      \"name\": \"string\",\n      \"states\": [\n        {\n          \"description\": \"string\",\n          \"validFrom\": \"2023-06-26\",\n          \"validTo\": \"2023-06-26\",\n          \"type\": {\n            \"technicalKey\": \"ACTIVE\",\n            \"name\": \"string\"\n          }\n        }\n      ],\n      \"identifiers\": [\n        {\n          \"value\": \"string\",\n          \"type\": {\n            \"technicalKey\": \"string\",\n            \"name\": \"string\"\n          }\n        }\n      ],\n      \"physicalPostalAddress\": {\n        \"geographicCoordinates\": {\n          \"longitude\": 0,\n          \"latitude\": 0,\n          \"altitude\": 0\n        },\n        \"country\": \"UNDEFINED\",\n        \"postalCode\": \"string\",\n        \"city\": \"string\",\n        \"street\": {\n          \"name\": \"string\",\n          \"houseNumber\": \"string\",\n          \"milestone\": \"string\",\n          \"direction\": \"string\"\n        },\n        \"administrativeAreaLevel1\": \"string\",\n        \"administrativeAreaLevel2\": \"string\",\n        \"administrativeAreaLevel3\": \"string\",\n        \"district\": \"string\",\n        \"companyPostalCode\": \"string\",\n        \"industrialZone\": \"string\",\n        \"building\": \"string\",\n        \"floor\": \"string\",\n        \"door\": \"string\"\n      },\n      \"alternativePostalAddress\": {\n        \"geographicCoordinates\": {\n          \"longitude\": 0,\n          \"latitude\": 0,\n          \"altitude\": 0\n        },\n        \"country\": \"UNDEFINED\",\n        \"postalCode\": \"string\",\n        \"city\": \"string\",\n        \"administrativeAreaLevel1\": \"string\",\n        \"deliveryServiceNumber\": \"string\",\n        \"deliveryServiceType\": \"PO_BOX\",\n        \"deliveryServiceQualifier\": \"string\"\n      },\n      \"bpnLegalEntity\": \"string\",\n      \"bpnSite\": \"string\",\n      \"createdAt\": \"2023-06-26\",\n      \"updatedAt\": \"2023-06-26\",\n      \"isLegalAddress\": true,\n      \"isMainAddress\": true,\n      \"index\": \"string\"\n    }\n  ],\n  \"errors\": [\n    {\n      \"errorCode\": \"BpnNotValid\",\n      \"message\": \"string\",\n      \"entityKey\": \"string\"\n    }\n  ],\n  \"errorCount\": 0,\n  \"entityCount\": 0\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>

On malformed requests

</div><div></div></TabItem></ApiTabs></div>
      